--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
         </div>
     </div>
 </section>
+
+<section class="about-us"></section>
 </main>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
