--- a/index.html
+++ b/index.html
@@ -1,63 +1,72 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <title>Chelsea Beauty Studio</title>
-    <link rel="icon" href="images/chelseaimg.png" type="image/png">
-    <link rel="stylesheet" type="text/css" href="main.css">
+  <title>Chelsea Beauty Studio</title>
+  <link rel="icon" href="images/chelseaimg.png" type="image/png">
+  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <header>
-   <nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img class="logo" src="images/chelseaimg.png" width="50px" alt="">Chelsea Beauty Studio</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" 
-    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span></button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-    <li class="nav-item">
-    <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-    <li class="nav-item">
-    <a class="nav-link active" href="#">About us</a>
-        </li>
-    <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
-        <ul class="dropdown-menu">
-     <li><a class="dropdown-item" href="#">Laser Treatments</a></li>
-     <li><a class="dropdown-item" href="#">Facial Care</a></li>
-    <li><a class="dropdown-item" href="#">Body Care</a></li>
-    <li><a class="dropdown-item" href="#">Massages</a></li>
-    <li><a class="dropdown-item" href="#">Gift Vauchers</a></li></ul> </li>
-      <li class="nav-item">
-      <a class="nav-link active" href="#">Price List</a></li>
-      <li class="nav-item">
-    <a class="nav-link" href="#">Contact us</a></li></ul>            
-          </div>
-        </div>
-      </nav>
+      <a class="navbar-brand" href="#"><img class="logo" src="images/chelseaimg.png" width="50px" alt="">Chelsea Beauty
+        Studio</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span></button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="#">About us</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+              aria-expanded="false">Services</a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Laser Treatments</a></li>
+              <li><a class="dropdown-item" href="#">Facial Care</a></li>
+              <li><a class="dropdown-item" href="#">Body Care</a></li>
+              <li><a class="dropdown-item" href="#">Massages</a></li>
+              <li><a class="dropdown-item" href="#">Gift Vauchers</a></li>
+            </ul>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="#">Price List</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Contact us</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
 </header>
 <main>
   <section class="image-container">
-        <div class="text-overlay"> STEP INTO A WORLD OF CARE, COMFORT AND BEAUTY</div>
-    </section>
-  
-   <section>
-    <div class="services"> 
+    <div class="text-overlay"> STEP INTO A WORLD OF CARE, COMFORT AND BEAUTY</div>
+  </section>
+
+  <section>
+    <div class="services">
       <span class="section-title">SERVICES</span>
-       <div class="row align-items-end">
+      <div class="row align-items-end">
         <div class="col">
           <div class="card">
             <img src="images/lasertretman.jpg" alt="Laser Treatments">
             <h3>Laser Treatments</h3>
             <p>Advanced laser treatments for smooth and rejuvenated skin.</p>
             <button class="more-btn"> More</button>
-            </div>
-           </div>
+          </div>
+        </div>
 
         <div class="col">
           <div class="card">
@@ -85,25 +94,70 @@
         </div>
       </div>
     </div>
-   </section> 
-   
-   <section class="new-in-studio">
+  </section>
+
+  <section class="new-in-studio">
     <span class="section-title">NEW IN OUR STUDIO</span>
     <div class="exilis-info">
-        <img src="images/btl exilis.jpg" alt="BTL Exilis">
-        <div class="exilis-text-box">
-            <h3>BTL Exilis</h3>
-            <p>BTL Exilis is a device that uses the latest technology for body and facial rejuvenation. With the help of radiofrequency energy, 
-              this treatment tightens the skin, reduces fat, and boosts collagen production, all without surgery. Experience a more youthful look and smoother skin at our salon.</p>
-            <button class="more-btn">Learn More</button>
-        </div>
+      <img src="images/btl exilis.jpg" alt="BTL Exilis">
+      <div class="exilis-text-box">
+        <h3>BTL Exilis</h3>
+        <p>BTL Exilis is a device that uses the latest technology for body and facial rejuvenation. With the help of
+          radiofrequency energy,
+          this treatment tightens the skin, reduces fat, and boosts collagen production, all without surgery. Experience
+          a more youthful look and smoother skin at our salon.</p>
+        <button class="more-btn">Learn More</button>
+      </div>
     </div>
-</section>
+  </section>
 
-<section class="about-us"></section>
+
+  <section class="about-us">
+    <span class="section-title">WHO WE ARE</span>
+   <div cla ss="container"> 
+      <div class="about-us-content">
+       <div class="about-us-image"> 
+          <img src="images/workers1.png" alt="workers">
+        </div>
+
+        <div class="about-us-text">          
+<p>
+  Beauty Studio Chelsea is a story that began in Radoviš with the desire to create a space where beauty and relaxation come together. 
+  With over 15 years of experience in cosmetics and body care, we proudly continue the tradition of providing high-quality services tailored to modern trends and the needs of our clients.
+  The year 2023 brought a renovation of our studio, which now combines a pleasant atmosphere, top-notch equipment, and the youthful energy of our team. Through continuous education, 
+  advanced devices, and carefully selected products, we ensure comprehensive care for the face and body. Our dedication to work and attention to detail guarantee that you will always
+   feel wonderful and satisfied with us.
+  Your satisfaction is our greatest motivation! </p>
+          <button class="more-btn">More</button>
+        </div>
+      </div>
+    </div>
+  </section>
 </main>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <footer>
+    <div class="footerContainer">
+        <div class="socialIcons">
+            <a href=""><i class="fa-brands fa-facebook"></i></a>
+            <a href=""><i class="fa-brands fa-instagram"></i></a>
+                        
+        </div>
+        <div class="footerNav">
+            <ul><li><a href="">Home</a></li>
+                <li><a href="">About us</a></li>
+                <li><a href="">Price list</a></li>
+                <li><a href="">Contact Us</a></li>
+            </ul>
+        </div>
+        
+    </div>
+    <div class="footerBottom">
+        <p>Copyright &copy;2024; Designed by<span class="designer">Marijana</span></p>
+    </div>
+</footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
